# deconfigured

./: .bowerrc  .gitignore  .swp  README.md  bower.json  circle.yml  dag.md  deconfigured.cabal  deconfigured.conf  deconfigured.kdev4  deconfigured.komodoproject  error.pcapng  package.json  prepare.sh  runBrowserify.sh
.kdev4/: deconfigured.kdev4
blog/: atlc-motivation.md  atlc.md  atlc2.md  atlc3.md  atlc4.md  atlc5.md  bar.md  dag.md  foo.md
cv/: .gitignore  main.tex
dev/js/: index.js
pages/: bookshelf.md  contact.md  cv.md  home.md
src/: Application.hs  Blog.hs  Main.hs  Pages.hs  Server.hs  Templates.hs
src/Application/: Types.hs
src/Blog/: Types.hs
src/Server/: Utils.hs
src/Templates/: Scripts.hs  Styles.hs
static/: browserconfig.xml  sitemap.xml
static/js/: main.js
