Name:                   deconfigured
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Application
                        Server
  Other-Modules:        Server.Internal
  Build-Depends:        base >= 4 && < 5
                      , scotty >= 0.9
                      , wai-middleware-static
                      , lucid
                      , text
                      , mtl
                      , transformers
                      , urlpath
                      , webpage
                      , data-default

Executable deconfigured
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -O2
  Main-Is:              Main.hs
  Build-Depends:        base >= 4 && < 5
                      , optparse-applicative
                      , scotty >= 0.9
                      , wai-middleware-static
                      , lucid
                      , yaml
                      , aeson
                      , directory
                      , data-default
                      , text
                      , mtl
                      , transformers
                      , urlpath
                      , webpage

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck
                      , quickcheck-instances

Source-Repository head
  Type:                 git
--  Location:
